# containerd-db-server

./: .env  .env.development  .env.production  .env.template  .env.updated  .gitignore  .pre-commit-config.yaml  Dockerfile  GUIDE.md  LICENSE  Makefile  PORT_CONFLICTS.md  README.md  WORKFLOW_UPDATES.md  autorun.sh  current_plan_server_side.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.server.yml  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  mysql-init.sh  pyproject.toml  pytest.ini  supervisord.conf
.github/workflows/: build-and-push.yml
connector-server/: main.py  requirements.txt
connector-server/api/: router.py
connector-server/auth/: api_keys.py  dependencies.py  jwt.py  users.py
connector-server/core/: config.py  database.py  security.py
connector-server/models/: __init__.py  api_key.py  query_history.py  user.py
connector-server/tests/: conftest.py  test_basic.py  test_core.py
database/: Dockerfile
database/conf.d/: mysql.cnf  performance.cnf
database/init/: 01-init-schema.sql  02-init-data.sql  03-init-permissions.sql
database/scripts/: backup.sh  healthcheck.sh  restore.sh
docs/: README.md  next_step.md
monitoring/netdata/: docker.conf
monitoring/scripts/: health_checks.sh  setup_netdata.sh
nginx/: nginx.conf
redis/: redis.conf
